@@ -17,10 +17,10 @@ import org.springframework.web.bind.annotation.ResponseBody;
 import com.user.model.UserVO;
 import com.user.service.UserService;
 
-import lombok.extern.slf4j.Slf4j;
+import lombok.extern.log4j.Log4j;
 
 @Controller
-@Slf4j
+@Log4j
 public class UserController {
 	
 	@Resource(name="userService")
@@ -29,59 +29,93 @@ public class UserController {
 	@GetMapping("/join")
 	public String joinForm() {
 		
-		return "/member/join";
-	}
+		return "/member/join";		
+	}//---------------------------
 	
 	@PostMapping("/join")
-	public String joinEnd(Model model, @ModelAttribute("user") UserVO user) {
-		
-		log.info("user === "+user);
-		if(user.getName() == null || user.getUserid() == null || user.getPwd() == null ||
-				user.getName().isBlank() || user.getUserid().isBlank() || user.getPwd().isBlank()) {
+	public String joinEnd(Model m, @ModelAttribute("user") UserVO user) {		
+		log.info("join === user: "+user);
+		if(user.getName()==null||user.getUserid()==null||user.getPwd()==null||
+				user.getName().trim().isEmpty()||user.getUserid().trim().isEmpty()
+				||user.getPwd().trim().isEmpty()) {
 			
 			return "redirect:join";
 		}
 		
-		int n = userService.createUser(user);
-		String str = (n>0) ? "회원가입 완료" : "가입실패";
-		String loc = (n>0) ? "admin/userList" : "javascript:history.back()";
-		model.addAttribute("message", str);
-		model.addAttribute("loc", loc);
+		int n=userService.createUser(user);
+		String str=(n>0)?"회원가입 완료":"가입 실패";
+		String loc=(n>0)?"admin/userList":"javascript:history.back()";
 		
+		m.addAttribute("message",str);
+		m.addAttribute("loc",loc);
 		return "msg";
-	}
+	}//---------------------------
+	/* 스프링에서 JSON데이터를 생성해야 하는 경우
+	 * 
+	 * [1] pom.xml에 아래 라이브러리를 등록해야 한다.
+	 * 
+	 * <dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.9.8</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-yaml -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-yaml</artifactId>
+			<version>2.9.8</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.8</version>
+		</dependency>
+	 * 
+	 * [2] @ResponseBody 어노테이션을 붙여주고
+	 * 반환되는 자료유형을 Map 또는 VO유형으로 하면 위 라이브러리가
+	 * 알아서 자동으로 json형태로 변환해준다.
+	 * [3] 응답유형이 json이라면
+	 * produces="application/json" 을 기술하자.
+	 * */
 	
-	
-	// 아이디 중복체크 ajax처리-----------------
-	@GetMapping(value="/idcheck", produces = "application/json")
+	/*아이디 중복체크 ajax처리-------------------
+	 * 응답 데이터만 반환해야 할 때=>@ResponseBody
+	 * */
+	@GetMapping(value = "/idcheck", produces = "application/json")
 	@ResponseBody
-	public Map<String, String> idCheck(@RequestParam("userid") String userid){
-		log.info("userid === "+userid);
-		boolean isUse = userService.idCheck(userid);
-		String result = (isUse) ? "ok":"no";
+	public  Map<String, String> idCheck(@RequestParam("userid") String userid){
+		log.info("userid==="+userid);		
+		boolean isUse=userService.idCheck(userid);
+		String result=(isUse)?"ok":"no";
 		
-		Map<String,String> map = new HashMap<>();
-		map.put("result", result);
+		Map<String, String> map=new HashMap<>();
+		map.put("result", result);		
 		return map;
-		
 	}
 	
 	@GetMapping("/admin/userList")
-	public String userList(Model model) {
-		List<UserVO> userArr = userService.listUser(null);
+	public String userList(Model m) {
+		List<UserVO> userArr=userService.listUser(null);
 		
-		model.addAttribute("userArr", userArr);
+		m.addAttribute("userArr",userArr);
 		return "/member/list";
 	}
-	
+
 	@PostMapping("/admin/userDel")
-	public String userDelete(@RequestParam(defaultValue = "0") int idx) {
-		log.info("idx === "+idx);
+	public String userDelete(@RequestParam(defaultValue="0") int idx) {
+		log.info("idx==="+idx);
 		if(idx==0) {
 			return "redirect:userList";
 		}
-		int n = userService.deleteUser(idx);
+		int n=userService.deleteUser(idx);
+		log.info("n: "+n);
 		return "redirect:userList";
 	}
+	
+	
 
 }
+
+
+
